# CherryChess

./: .gitignore  CMakeLists.txt  CMakePresets.json  empty.ixx
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml
CherryChess/: CMakeLists.txt  CherryChess.cpp  CherryChess.h  CherryChess.ixx
benchmark/: CMakeLists.txt
benchmark/benchmarks/: moveEnumerationBenchmark.ixx  searchBenchmark.ixx
benchmark/common/: benchmark.ixx
src/: CMakeLists.txt
src/Data/: Board.ixx  evaluation.ixx  evaluationRange.ixx  move.ixx  piece.ixx  searchResult.ixx  squareIndex.ixx  transpositionTable.ixx
src/game/: evalConstants.ixx  moveEnumeration.ixx  positionEval.ixx  searchManager.ixx  searchWorker.ixx
src/uci/: commandEmitter.ixx  interfaceManager.ixx
src/uci/commands/: toEngine.ixx
src/uci/commands/fromEngine/: cmdbestmove.ixx  cmdid.ixx  cmdinfo.ixx  cmdreadyok.ixx  cmduciok.ixx
src/uci/commands/toEngine/: cmdgo.ixx  cmdisready.ixx  cmdposition.ixx  cmdquit.ixx  cmdstop.ixx  cmduci.ixx
src/utils/: bitwiseHash.ixx  concurrentQueue.ixx  inlineStack.ixx
stdxx/: std.ixx
tests/: CMakeLists.txt
tests/data/: boardTest.ixx  pieceTest.ixx  squareIndexTest.ixx  tacticsTest.ixx
tests/data/board/: fenTest.ixx
tests/framework/: test.ixx  test_path.h.in
tests/game/: moveEnumerationTest.ixx
tests/input/: tactics.txt
